--- a/about.html
+++ b/about.html
@@ -77,7 +77,6 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link active">Sobre</a>
                 <a href="service.html" class="nav-item nav-link">Qualificações</a>
-                <a href="contact.html" class="nav-item nav-link">Contato</a>
             </div>
             <div class="h-100 d-lg-inline-flex align-items-center d-none">
                 <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -121,7 +120,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 me-3" src="img/icon/icon-09-primary.png" alt="">
+                                    <img class="flex-shrink-0 me-3" src="img/html.png" alt="">
                                     <h5 class="mb-0">Best Quality Services</h5>
                                 </div>
                             </div>
@@ -163,6 +162,7 @@
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
                     <span class="text-primary">Happy Clients</span>
+                    <img class="flex-shrink-0 me-3" src="img/pc.png" alt="">
                 </div>
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
@@ -192,7 +192,8 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/1.png" alt="">
+                            
+                            <img class="w-100" src="img/1.png" alt="Image">
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
@@ -208,7 +209,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/2.png" alt="">
+                            <img class="w-100" src="img/2.png" alt="Image">
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
@@ -224,7 +225,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/3.png" alt="">
+                            <img class="w-100" src="img/3.png" alt="Image">
                             <div class="team-social">
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
