--- a/about.html
+++ b/about.html
@@ -78,11 +78,8 @@
                 <a href="about.html" class="nav-item nav-link active">Sobre</a>
                 <a href="service.html" class="nav-item nav-link">Qualificações</a>
             </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </nav>
@@ -110,22 +107,18 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <h1 class="display-6 mb-5">Sobre</h1>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 me-3" src="img/icon/icon-07-primary.png" alt="">
-                                    <h5 class="mb-0">Expert Technician</h5>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="display-6 mb-5">
                                 <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 me-3" src="img/html.png" alt="">
-                                    <h5 class="mb-0">Best Quality Services</h5>
+                                    <h3 class="mb-0">Sobre mim</h3>
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-4">Olá! Me chamo Heloísa e tenho 16 anos. Atualmente, estou cursando o 1º ano do Ensino Médio Integrado ao Técnico de Informática para Internet na ETEC Profª Maria Cristina Medeiros. Atualmente moro em Suzano-SP, pretendo seguir na área de TI.</p>
+                        <p class="mb-4">Olá! Me chamo Heloísa e tenho 16 anos. Atualmente, estou cursando o 1º ano do Ensino Médio Integrado ao Técnico de Informática para Internet na ETEC Profª Maria Cristina Medeiros. Meu nível de inglês é intermediário. Atualmente moro em Suzano-SP e, pretendo seguir na área de TI.</p>
                         <div class="border-top mt-4 pt-4">
                             <div class="row">
                                 <div class="col-sm-6">
@@ -160,21 +153,21 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Happy Clients</span>
-                    <img class="flex-shrink-0 me-3" src="img/pc.png" alt="">
+                    <h1 class="display-4 text-white" data-toggle="counter-up">60</h1>
+                    <span class="text-primary">HTML</span>
+                    
                 </div>
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Projects Succeed</span>
+                    <h1 class="display-4 text-white" data-toggle="counter-up">80</h1>
+                    <span class="text-primary">PHOTOSHOP</span>
                 </div>
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Awards Achieved</span>
+                    <h1 class="display-4 text-white" data-toggle="counter-up">40</h1>
+                    <span class="text-primary">Phyton</span>
                 </div>
                 <div class="col-sm-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
-                    <h1 class="display-4 text-white" data-toggle="counter-up">1234</h1>
-                    <span class="text-primary">Team Members</span>
+                    <h1 class="display-4 text-white" data-toggle="counter-up">40</h1>
+                    <span class="text-primary">MySQL</span>
                 </div>
             </div>
         </div>
@@ -186,7 +179,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-6 mb-5">Meet Our Professional Team Members</h1>
+                <h1 class="display-6 mb-5">Minhas Competências Socioemocionais</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -195,14 +188,11 @@
                             
                             <img class="w-100" src="img/1.png" alt="Image">
                             <div class="team-social">
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5>Full Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5>Autogestão</h5>
+                            <span class="text-primary"></span>
                         </div>
                     </div>
                 </div>
@@ -211,14 +201,11 @@
                         <div class="team-img position-relative overflow-hidden">
                             <img class="w-100" src="img/2.png" alt="Image">
                             <div class="team-social">
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5>Full Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5>Amabilidade</h5>
+                            <span class="text-primary"></span>
                         </div>
                     </div>
                 </div>
@@ -227,14 +214,11 @@
                         <div class="team-img position-relative overflow-hidden">
                             <img class="w-100" src="img/3.png" alt="Image">
                             <div class="team-social">
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                         <div class="bg-light text-center p-4">
-                            <h5>Full Name</h5>
-                            <span class="text-primary">Designation</span>
+                            <h5>Resiliência emocional</h5>
+                            <span class="text-primary"></span>
                         </div>
                     </div>
                 </div>
@@ -248,44 +232,25 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">Currículo</h1>
-                    <span>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</span>
-                </div>
-                <div class="col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Clita erat ipsum et lorem et sit, sed stet lorem sit clita.</p>
-                    <div class="position-relative">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                    <h1 class="text-white mb-4">Currículo</h1>
+                    <span>Meu currículo online</span>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h5 class="text-light mb-4">Entre em contato por aqui:</h5>
+                    <p><i class="fa fa-phone-alt me-3"></i>+55 11 97154-5287</p>
+                    <p><i class="fa fa-envelope me-3"></i>loutisqk@gmail.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation</a>
-                    <a class="btn btn-link" href="">Cooling Services</a>
-                    <a class="btn btn-link" href="">Heating Services</a>
-                    <a class="btn btn-link" href="">Annual Inspections</a>
+                    <h5 class="text-light mb-4">Links rápidos</h5>
+                    <a class="btn btn-link" href="https://projetooliveira.github.io/curriculo-bootstrap/about.html">Sobre</a>
+                    <a class="btn btn-link" href="https://projetooliveira.github.io/curriculo-bootstrap/service.html">Qualificaçôes</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Follow Us</h5>
+                    <h5 class="text-light mb-4">Me contate</h5>
                     <div class="d-flex">
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
+
                     </div>
                 </div>
             </div>
@@ -294,7 +259,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="#">Currículo</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
