--- a/service.html
+++ b/service.html
@@ -80,10 +80,8 @@
                 <a href="service.html" class="nav-item nav-link active">Qualificaçôes</a>
             </div>
             <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </nav>
@@ -93,7 +91,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-4 text-white animated slideInDown mb-4">Services</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Minhas Qualificações</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -109,72 +107,67 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-6 mb-5">Qualificações</h1>
+                <h1 class="display-6 mb-5">Portfólio</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-1.jpg" alt="">
+                        <img class="img-fluid" src="img/meusite.JPG" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-01-light.png" alt="">
+                             
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">AC Installation</a>
+                            <a class="h4 mx-4 mb-0" href="https://projetooliveira.github.io/meuprimeirosite/">Meu primeiro site</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-2.jpg" alt="">
+                        <img class="img-fluid" src="img/stopmotion.JPG" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-02-light.png" alt="">
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">Cooling Services</a>
+                            <a class="h4 mx-4 mb-0" href="https://youtu.be/19rhHVU0rxc">Stop Motion para feira Tecnológica</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-3.jpg" alt="">
+                        <img class="img-fluid" src="img/megievamp.jpg" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-03-light.png" alt="">
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">Heating Services</a>
+                            <a class="h4 mx-4 mb-0" href="https://lh4.googleusercontent.com/gdrP-tcnn7fXjPc92IKZELrKdrQaL_7FimsS_kluKbxP8e1SnlLOSYFdwEnJWygUJAFlRBDlERFCn2I=w1600-h789">Edição no PhotoShop</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-4.jpg" alt="">
+                        <img class="img-fluid" src="img/tnbh.JPG" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-04-light.png" alt="">
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">Maintenance & Repair</a>
+                            <a class="h4 mx-4 mb-0" href="https://lh3.googleusercontent.com/igj7YwVAPKMiZ4sU5_2Lf7p-dXZI0MScaq6-MmY4M9lLwNQlThr_e8X0OTXL4_iRjZPHFuKBFXx91ho=w1600-h732">Poster de banda feito no Canva</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-5.jpg" alt="">
+                        <img class="img-fluid" src="img/figgma.JPG" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-05-light.png" alt="">
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">Indoor Air Quality</a>
+                            <a class="h4 mx-4 mb-0" href="https://www.figma.com/proto/twVdgOCIYM5LpvmllwtvgS/AD---Helo%C3%ADsa-A.-de-Oliveira?node-id=2%3A14&starting-point-node-id=2%3A14">Projeto em Figma</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item">
-                        <img class="img-fluid" src="img/service-6.jpg" alt="">
+                        <img class="img-fluid" src="img/smurf.JPG" alt="">
                         <div class="d-flex align-items-center bg-light">
                             <div class="service-icon flex-shrink-0 bg-primary">
-                                <img class="img-fluid" src="img/icon/icon-06-light.png" alt="">
                             </div>
-                            <a class="h4 mx-4 mb-0" href="">Annual Inspections</a>
+                            <a class="h4 mx-4 mb-0" href="https://lh3.googleusercontent.com/AqScEW6i8Xt3XKQNtWObQ5vjwDjE7orkddS56VKZMuuHvkmDBqFcFYz5oTxvJhoRb2BkSxLvShm1XE4=w1600-h732">Projeto no PhotoShop</a>
                         </div>
                     </div>
                 </div>
@@ -189,41 +182,25 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">Currículo</h1>
-                    <span>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</span>
-                </div>
-                <div class="col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Clita erat ipsum et lorem et sit, sed stet lorem sit clita.</p>
-                    <div class="position-relative">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                    <h1 class="text-white mb-4">Currículo</h1>
+                    <span>Meu currículo online</span>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <h5 class="text-light mb-4">Entre em contato por aqui:</h5>
+                    <p><i class="fa fa-phone-alt me-3"></i>+55 11 97154-5287</p>
+                    <p><i class="fa fa-envelope me-3"></i>loutisqk@gmail.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="">AC Installation</a>
-                    <a class="btn btn-link" href="">Cooling Services</a>
-                    <a class="btn btn-link" href="">Heating Services</a>
-                    <a class="btn btn-link" href="">Annual Inspections</a>
+                    <h5 class="text-light mb-4">Links rápidos</h5>
+                    <a class="btn btn-link" href="https://projetooliveira.github.io/curriculo-bootstrap/about.html">Sobre</a>
+                    <a class="btn btn-link" href="https://projetooliveira.github.io/curriculo-bootstrap/service.html">Qualificaçôes</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">Sobre</a>
-                    <a class="btn btn-link" href="">Qualifições</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Follow Us</h5>
+                    <h5 class="text-light mb-4">Me contate</h5>
                     <div class="d-flex">
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
+
                     </div>
                 </div>
             </div>
@@ -232,7 +209,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="#">Currículo</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
