--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -76,14 +76,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav mx-auto bg-light pe-4 py-3 py-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">Sobre mim</a>
+                <a href="about.html" class="nav-item nav-link">Sobre</a>
                 <a href="service.html" class="nav-item nav-link">Qualificações</a>
             </div>
             <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </nav>
@@ -148,13 +146,13 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6">
-                    <h1 class="text-white mb-4"><img class="img-fluid me-3" src="img/icon/icon-02-light.png" alt="">Currículo</h1>
+                    <h1 class="text-white mb-4">Currículo</h1>
                     <span>Meu currículo online</span>
                 </div>
               
 
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Get In Touch</h5>
+                    <h5 class="text-light mb-4">Entre em contato por aqui:</h5>
                     <p><i class="fa fa-phone-alt me-3"></i>+55 11 97154-5287</p>
                     <p><i class="fa fa-envelope me-3"></i>loutisqk@gmail.com</p>
                 </div>
@@ -162,16 +160,14 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Links rápidos</h5>
                     <a class="btn btn-link" href="about.html">Sobre mim</a>
-                    <a class="btn btn-link" href="contact.html">Contato</a>
                     <a class="btn btn-link" href="service.html">Qualificações</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Me contate</h5>
                     <div class="d-flex">
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square rounded-circle me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://twitter.com/loutisqk"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square rounded-circle me-1" href="https://www.instagram.com/heloisah_lolo/"><i class="fab fa-instagram"></i></a>
+
                     </div>
                 </div>
             </div>
@@ -180,7 +176,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="#">Currículo</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
